methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:10: error: not found: value biscuit
var y=biscuit()
      ^MethodsReturning:13: error: not found: value biscuit
  y=biscuit()
    ^